# renderbrains-docs

./: .dropboxignore  .gitignore  ARCHITECT.md  CLAUDE.md  Makefile  README.md  _quarto.yml  index.qmd  preview.html  privacy-policy.qmd  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml
assets/: custom.css
docs/: index.qmd
docs/architecture/: index.qmd
docs/assets/: custom.css
docs/decisions/: index.qmd
docs/guides/: index.qmd
docs/references/: index.qmd
explanation/: index.qmd
how-to/: index.qmd
reference/: index.qmd
scripts/: lint.py  sync.py
scripts/utils/: frontmatter.py
tutorials/: index.qmd  math-3d-ch01-trigonometry.qmd
vault/: index.md  log.md
vault/.obsidian/: workspace.json
vault/templates/: publishable-note.md
wiki/: math-for-3d-games-programmers.md
wiki/math-for-3d-games-programmers/: ch01-trigonometry.md  ch02-complex-numbers.md  ch03-vectors.md  ch04-geometrical-objects.md  ch05-matrices-transforms-1.md  ch06-matrices-transforms-2.md  ch07-quaternions.md  ch08-derivatives.md  ch09-integrals.md
